--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,28 @@
-Package: facebookadsR
 Type: Package
-Title: What the Package Does (Title Case)
+Package: facebookadsR
+Title: Access to facebook Ads via the 'Windsor.ai' API
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
+Authors@R: c(
+    person("Pablo", "Sanchez", email = "pablosama@outlook.es", role = c("cre","aut")),
+    person("Windsor.ai", email = "admin@windsor.ai", role = "cph"))
+Description: Collect  marketing data from facebook Ads using the 'Windsor.ai' API <https://www.windsor.ai/api-fields/>.
     Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+License: GPL-3
+URL: https://windsor.ai/
+Depends:
+    R (>= 3.5.0)
+Imports:
+    jsonlite (>= 1.7.2)
+Suggests:
+    knitr,
+    rmarkdown,
+    dplyr,
+    ggplot2,
+    tidyr, 
+    curl
+VignetteBuilder:
+    knitr
 Encoding: UTF-8
+Language: en-US
 LazyData: true
+RoxygenNote: 7.2.1
